Thu Feb  1 14:33:17 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * Makefile.in (xlint): new rule; does nothing, as I'm not sure
        running lint is actually advisable in here, but the top-level
        Makefile thinks it can `make xlint' here.

Thu Feb  1 15:07:42 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getopt.c: Remove rcsid.

Tue Jan 30 18:20:27 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getline.c: Don't define NDEBUG.
	(getstr): Rewrite assertions in a way which should stay clear of
	signed/unsigned problems and compiler warnings thereof.

Thu Jan 25 00:14:06 1996  Jim Kingdon  <kingdon@beezley.cyclic.com>

	* yesno.c (yesno): fflush stdout as well as stderr.

Wed Jan  3 18:16:50 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sighandle.c (SIG_register): Use memset not bzero.
	* system.h: Remove defines for index, rindex, bcmp, and bzero.
	All the calls to those functions are gone from CVS.

Tue Jan  2 13:00:00 1996  Jim Kingdon  <kingdon@peary.cyclic.com>

	Visual C++ lint:
	* sighandle.c: Prototype SIG_handle and SIG_defaults.
	Use SIG_ERR where appropriate.

Mon Dec 18 10:15:05 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rename.c: Check ENOENT rather than existence_error.  The latter
	is undefined in this file, and including system.h is said to cause
	(unspecified) problems.

Sun Dec 17 23:58:06 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vasprintf.c: Removed (it is no longer used).
	* Makefile.in (SOURCES): Remove vasprintf.c.

Sat Dec 16 17:18:33 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vasprintf.c: Added.
	* Makefile.in (SOURCES): Add vasprintf.c

Mon Dec  4 10:54:04 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getdate.c: Remove #line directives.  I know, this is a kludge,
	but Visual C++ 2.1 seems to require it (why, I have no idea.  It
	has no trouble with the #line directives in getdate in CVS 1.6).

Sat Nov 18 16:20:37 1995  Karl Fogel  <kfogel@floss.cyclic.com>
