@@ -1,3 +1,8 @@
+Mon Feb 12 10:04:46 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* vasprintf.c: Added (same contents as before).
+	* Makefile.in (SOURCES): Add vasprintf.c.
+
 Thu Feb  1 14:33:17 1996  Karl Fogel  <kfogel@floss.red-bean.com>
 
         * Makefile.in (xlint): new rule; does nothing, as I'm not sure
